--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "start -p $PORT",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
