--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format:write": "prettier --write \"{app,lib,components}/**/*.{ts,tsx,mdx}\" --cache",
     "format:check": "prettier --check \"{app,lib,components}**/*.{ts,tsx,mdx}\" --cache"
   },
+  "node":"18.16.0",
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -54,7 +55,7 @@
     "@typescript-eslint/parser": "^5.59.7",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.31.0",
-    "eslint-config-next": "13.4.7-canary.1",
+    "eslint-config-next": "13.4.6",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-tailwindcss": "^3.12.0",
     "postcss": "^8.4.21",
@@ -63,6 +64,9 @@
     "tailwindcss": "^3.3.1",
     "tailwindcss-animate": "^1.0.5",
     "typescript": "^5.1.3"
+  },
+  "pnpm": {
+    "version": "8.6.3"
   },
   "packageManager": "pnpm@8.6.3"
 }
