--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "install-force": "pnpm install --force" ,
     "build": "next build",
     "start": "start -p $PORT",
     "lint": "next lint",
