--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "install-force": "pnpm install --force" ,
+    "install-force": "pnpm install --force",
     "build": "next build",
     "start": "start -p $PORT",
     "lint": "next lint",
@@ -64,7 +64,7 @@
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "^3.3.1",
     "tailwindcss-animate": "^1.0.5",
-    "typescript": "^5.2.2"
+    "typescript": ">=5.2.2"
   },
   "pnpm": {
     "version": "8.6.3"
