--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "install-force": "pnpm install --force",
+    "install-force": "npm install --force",
     "build": "next build",
     "start": "start -p $PORT",
     "lint": "next lint",
@@ -14,7 +14,10 @@
     "format:write": "prettier --write \"{app,lib,components}/**/*.{ts,tsx,mdx}\" --cache",
     "format:check": "prettier --check \"{app,lib,components}**/*.{ts,tsx,mdx}\" --cache"
   },
-  "node":"18.16.0",
+  "engines": {
+    "node": "18.16.0",   
+    "npm": "6.0"     
+  },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -66,8 +69,5 @@
     "tailwindcss-animate": "^1.0.5",
     "typescript": ">=5.2.2"
   },
-  "pnpm": {
-    "version": "8.6.3"
-  },
-  "packageManager": "pnpm@8.6.3"
+  "packageManager": "pnpm@8.6.2"
 }
