--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@vercel/kv": "^0.2.1",
     "@vercel/og": "^0.5.7",
     "ai": "^2.1.6",
-    "class-variance-authority": "^0.4.0",
+    "class-variance-authority": "latest",
     "clsx": "^1.2.1",
     "focus-trap-react": "^10.1.1",
     "nanoid": "^4.0.2",
