--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "baseUrl": ".",
+    "baseUrl": "https://motobotv2-db74824bc716.herokuapp.com",
     "paths": {
       "@/*": ["./*"]
     },
