--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,7 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
-    "noImplicitAny": false,
-    "strictNullChecks": false,
-    "strict": false,
+    "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "incremental": true,
@@ -24,6 +22,7 @@
         "name": "next"
       }
     ],
+    "strictNullChecks": true
   },
   "include": [
     "next-env.d.ts",
